# AndroidNdkLibrary

./: .gitignore  README.md
AndroidNdkCompileSharedNoJniLibrary/app/: CMakeLists.txt  build.gradle
AndroidNdkCompileSharedNoJniLibrary/app/src/main/: AndroidManifest.xml
AndroidNdkCompileSharedNoJniLibrary/gradle/wrapper/: gradle-wrapper.properties
AndroidNdkCompileSharedWithJniLibrary/: settings.gradle
AndroidNdkCompileSharedWithJniLibrary/app/: build.gradle
AndroidNdkCompileSharedWithJniLibrary/cjsoninterface/: CMakeLists.txt  build.gradle
AndroidNdkCompileSharedWithJniLibrary/cjsoninterface/src/androidTest/java/com/example/xzy/cjsoninterface/: ExampleInstrumentedTest.java
AndroidNdkCompileSharedWithJniLibrary/cjsoninterface/src/main/: AndroidManifest.xml
AndroidNdkCompileSharedWithJniLibrary/cjsoninterface/src/main/cpp/: Jni_CjsonInterface.cpp
AndroidNdkCompileSharedWithJniLibrary/cjsoninterface/src/main/cpp/cppfile/: CCjsonUtils.cpp  CCjsonUtils.h
AndroidNdkCompileSharedWithJniLibrary/cjsoninterface/src/main/java/com/example/xzy/cjsoninterface/: JniCjsonInterface.java
AndroidNdkCompileSharedWithJniLibrary/cjsoninterface/src/main/res/values/: strings.xml
AndroidNdkCompileSharedWithJniLibrary/cjsoninterface/src/test/java/com/example/xzy/cjsoninterface/: ExampleUnitTest.java
AndroidNdkCompileSharedWithJniLibrary/gradle/wrapper/: gradle-wrapper.properties
AndroidNdkCompileStaticLibrary/app/: CMakeLists.txt  build.gradle
AndroidNdkCompileStaticLibrary/gradle/wrapper/: gradle-wrapper.properties
AndroidNdkInvokeSharedNoJniLibrary/app/: CMakeLists.txt  build.gradle
AndroidNdkInvokeSharedNoJniLibrary/gradle/wrapper/: gradle-wrapper.properties
AndroidNdkInvokeSharedWithJniLibrary/app/: build.gradle
AndroidNdkInvokeSharedWithJniLibrary/gradle/wrapper/: gradle-wrapper.properties
AndroidNdkInvokeStaticLibrary/app/: CMakeLists.txt  build.gradle
AndroidNdkInvokeStaticLibrary/gradle/wrapper/: gradle-wrapper.properties
(+48 files in other folders)
